--- a/css/style.scss
+++ b/css/style.scss
@@ -495,8 +495,8 @@ body {
                 border-radius: 14px;
                 margin-bottom: 20px;
                 .notifications {
-                    max-height: 34px;
-                    min-height: 34px;
+                    max-height: 64px;
+                    min-height: 64px;
                     overflow: hidden;
                     padding-top: 5px;
                     padding-left: 10px;
@@ -529,6 +529,7 @@ body {
                         color: #0C0B0B;
                         padding-bottom: 5px;
                         padding-top: 5px;
+                        min-height: 64px;
                         &.unread {
                             position: relative;
                             z-index: 5;
@@ -544,8 +545,7 @@ body {
                                 z-index: -1;
                             }
                             a {
-                                text-decoration: solid underline 2px;
-                                text-underline-offset: 3px;
+                                border-color: #000000;
                             }
                         }
                         a {
@@ -559,6 +559,9 @@ body {
                             outline: none;
                             display: inline-block;
                             position: relative;
+                            text-decoration: solid underline 2px;
+                            text-underline-offset: 3px;
+                            border-color: #C4C4C6;
                         }
                     }
                 }
@@ -570,9 +573,9 @@ body {
                 .text-col {
                     width: 65%;
                     padding-top: 45px;
-                    padding-bottom: 40px;
                     padding-left: 35px;
                     padding-right: 5px;
+                    padding-bottom: 10px;
                     .header {
                         font-family: $fontPage;
                         font-weight: bold;
