--- a/css/style.scss
+++ b/css/style.scss
@@ -545,7 +545,7 @@ body {
                                 z-index: -1;
                             }
                             a {
-                                border-color: #000000;
+                                text-decoration-color: #000000;
                             }
                         }
                         a {
@@ -561,7 +561,7 @@ body {
                             position: relative;
                             text-decoration: solid underline 2px;
                             text-underline-offset: 3px;
-                            border-color: #C4C4C6;
+                            text-decoration-color: #C4C4C6;
                         }
                     }
                 }
