--- a/css/login.css
+++ b/css/login.css
@@ -403,6 +403,15 @@ body {
   color: #000000;
 }
 
+.login-page .login-content .login-form .login-input .error-text,
+.login-page .login-content .agreement-form .login-input .error-text {
+  padding-top: 5px;
+  font-size: 12pz;
+  line-height: 14px;
+  font-family: "Gilroy", Verdana, Tahoma, sans-serif;
+  color: #FF7262;
+}
+
 .login-page .login-content .login-form .btn-cont,
 .login-page .login-content .agreement-form .btn-cont {
   padding-bottom: 20px;
