--- a/css/login.scss
+++ b/css/login.scss
@@ -270,6 +270,13 @@ body {
                         color: $fontColor;
                     }
                 }
+                .error-text {
+                    padding-top: 5px;
+                    font-size: 12pz;
+                    line-height: 14px;
+                    font-family: $fontPage;
+                    color: $errorColor;
+                }
             }
             .btn-cont {
                 padding-bottom: 20px;
