--- a/css/style.scss
+++ b/css/style.scss
@@ -594,6 +594,7 @@ body {
                         font-size: 16px;
                         line-height: 24px;
                         color: #0C0B0B;
+                        min-height: 64px;
                     }
                 }
                 .img-col {
