--- a/css/login.css
+++ b/css/login.css
@@ -212,6 +212,13 @@ body {
   max-width: 500px;
 }
 
+.login-page .login-content .login-form .under-header a,
+.login-page .login-content .agreement-form .under-header a {
+  text-decoration: none;
+  outline: none;
+  color: inherit;
+}
+
 .login-page .login-content .login-form .radio-input.has-error label,
 .login-page .login-content .agreement-form .radio-input.has-error label {
   color: #FF7262;
