chnage font weight

--- a/css/style.scss
+++ b/css/style.scss
@@ -720,7 +720,7 @@ body {
             .header {
                 font-family: $fontPage;
                 font-style: normal;
-                font-weight: 800;
+                font-weight: bold;
                 font-size: 24px;
                 line-height: 29px;
                 color: #0C0B0B;
