--- a/css/style.css
+++ b/css/style.css
@@ -1005,7 +1005,7 @@ body {
 .page-cont .right-side .page-content .header {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
   font-style: normal;
-  font-weight: 800;
+  font-weight: bold;
   font-size: 24px;
   line-height: 29px;
   color: #0C0B0B;
