--- a/css/login.scss
+++ b/css/login.scss
@@ -261,6 +261,7 @@ body {
                     border: 1px solid #C4C4C4;
                     border-radius: 15px;
                     font-family: $fontPage;
+                    font-weight: normal;
                     font-size: 13px;
                     line-height: 15px;
                     color: $fontColor;
@@ -296,7 +297,7 @@ body {
                 border-radius: 15px;
                 cursor: pointer;
                 font-family: $fontPage;
-                font-weight: 300;
+                font-weight: normal;
                 font-size: 13px;
                 line-height: 15px;
                 color: $fontColor;
