--- a/css/login.css
+++ b/css/login.css
@@ -345,7 +345,7 @@ body {
 .login-page .login-content .agreement-form .login-input input[type=tel]::-webkit-input-placeholder,
 .login-page .login-content .agreement-form .login-input input[type=password]::-webkit-input-placeholder {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
-  font-weight: 300;
+  font-weight: normal;
   font-size: 13px;
   line-height: 15px;
   color: #000000;
@@ -360,7 +360,7 @@ body {
 .login-page .login-content .agreement-form .login-input input[type=tel]::-moz-placeholder,
 .login-page .login-content .agreement-form .login-input input[type=password]::-moz-placeholder {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
-  font-weight: 300;
+  font-weight: normal;
   font-size: 13px;
   line-height: 15px;
   color: #000000;
@@ -375,7 +375,7 @@ body {
 .login-page .login-content .agreement-form .login-input input[type=tel]:-ms-input-placeholder,
 .login-page .login-content .agreement-form .login-input input[type=password]:-ms-input-placeholder {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
-  font-weight: 300;
+  font-weight: normal;
   font-size: 13px;
   line-height: 15px;
   color: #000000;
@@ -390,7 +390,7 @@ body {
 .login-page .login-content .agreement-form .login-input input[type=tel]::-ms-input-placeholder,
 .login-page .login-content .agreement-form .login-input input[type=password]::-ms-input-placeholder {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
-  font-weight: 300;
+  font-weight: normal;
   font-size: 13px;
   line-height: 15px;
   color: #000000;
@@ -405,7 +405,7 @@ body {
 .login-page .login-content .agreement-form .login-input input[type=tel]::placeholder,
 .login-page .login-content .agreement-form .login-input input[type=password]::placeholder {
   font-family: "Gilroy", Verdana, Tahoma, sans-serif;
-  font-weight: 300;
+  font-weight: normal;
   font-size: 13px;
   line-height: 15px;
   color: #000000;
