--- a/css/login.scss
+++ b/css/login.scss
@@ -270,7 +270,7 @@ body {
                     max-width: 345px;
                     &::placeholder {
                         font-family: $fontPage;
-                        font-weight: 300;
+                        font-weight: normal;
                         font-size: 13px;
                         line-height: 15px;
                         color: $fontColor;
